🐛 Fix safari align bug

--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -47,6 +47,7 @@
 }
 
 .nav-toggle-text {
+	align-self: center;
 	font-size: 0.75em;
 	color: $white;
 	text-transform: uppercase;
